--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "element-plus": "^2.8.1",
+    "github-markdown-css": "^5.6.1",
     "markdown-it": "^14.1.0",
-    "vue": "^3.4.37"
+    "md-editor-v3": "^4.19.2",
+    "pinia": "^2.2.2",
+    "vditor": "^3.10.5",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "less": "^4.2.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
