--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "axios": "^1.7.5",
     "element-plus": "^2.8.1",
     "github-markdown-css": "^5.6.1",
+    "highlight.js": "^11.10.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.1.0",
+    "markdown-it-highlight": "^0.2.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "md-editor-v3": "^4.19.2",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^3.2.3",
