--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@agoose77/markdown-it-mermaid": "^1.1.0",
     "@mdit-vue/plugin-component": "^2.1.4",
     "@mdit-vue/plugin-frontmatter": "^2.1.4",
     "@mdit-vue/plugin-headers": "^2.1.4",
@@ -24,6 +23,7 @@
     "axios": "^1.7.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.8.1",
     "github-markdown-css": "^5.6.1",
     "highlight.js": "^11.10.0",
