--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/markdown-it-attrs": "^4.1.3",
     "@types/markdown-it-container": "^2.0.10",
     "@types/markdown-it-emoji": "^3.0.1",
+    "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.1.2",
     "less": "^4.2.0",
     "shiki": "^3.4.0",
