--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
-    "element-plus": "^2.8.1",
     "github-markdown-css": "^5.6.1",
     "highlight.js": "^11.10.0",
     "markdown-it": "^14.1.0",
@@ -51,15 +50,25 @@
   "devDependencies": {
     "@shikijs/markdown-it": "^3.4.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-attrs": "^4.1.3",
     "@types/markdown-it-container": "^2.0.10",
     "@types/markdown-it-emoji": "^3.0.1",
     "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.1.2",
+    "assert": "^2.1.0",
+    "browserify-fs": "^1.0.0",
+    "events": "^3.3.0",
     "less": "^4.2.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "shiki": "^3.4.0",
+    "stream-browserify": "^3.0.0",
     "terser": "^5.44.0",
     "typescript": "^5.5.3",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "vite": "^6.3.5",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.0.29"
